VZDEV/src/objects/CCPM_logLevelSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to set the default logging</description>
    <fields>
        <fullName>CCPM_IsDebugLogged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If True, log debug-level message in the Org</inlineHelpText>
        <label>Log Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isErrorLogged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If True, log error-level messages in this Org</inlineHelpText>
        <label>Log Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isInfoLogged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If True, log info-level messages in this Org</inlineHelpText>
        <label>Log Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isTraceLogged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If True, log trace messages in this Org</inlineHelpText>
        <label>Trace Logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isWarnLogged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If True, log warning-level messages in this Org</inlineHelpText>
        <label>Log Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_purgeLogAfter__c</fullName>
        <inlineHelpText>Number of days that log are keep in this Org. Logs are automatically deleted if the
Apex Batch is setup</inlineHelpText>
        <label>Purge Log After</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Log Level Settings</label>
</CustomObject>